--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ layout: default
 <!DOCTYPE html>
 
 
-<h1>Welcome to the Sample Github Portfolio</h1>
+<h1>Hello! My name is Nicolas, and I have many years of experience in computer networking, creative tools, and team-based projects. I have a keen interest in learning as much as I possibly 
+    can about any particular field, regardless of familiarity. Participating in many projects, including but not limited to web-based video creation, program modification, and 
+    intense research-based think groups.</h1>
 <p>
 <i>Note: I have this set up for someone who is new to Github and is using it in their browser. If you are familiar with Github, feel free to use your own site organization, theme, css, etc.</i>
 <br>
