--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@ layout: default
 <p>
 <I> This webpage will evolve, so I look forward to how it'll turn out!</i>
 <br>
-Click through the sample website, and see how to organize your assignments for this course.
 </p>
 <h2>Summary about me!</h2>  
-    <p>I have many years of experience in computer networking, creative tools, and team-based projects. I have a keen interest in learning as much as possible about any particular field, regardless of my familiarity with it. Participating in many projects, including but not limited to web-based video creation, program modification, and intense research-based think groups.
+    <p>I have many years of experience in computer networking, creative tools, and team-based projects. I have a keen interest in learning as much as possible about any particular field, regardless of my familiarity with it. Participating in many projects, including but not limited to web-based video creation, program modification, and intense research-based think groups. I am dedicated to whatever assignment and project is given to me, and I always seek ways to improve and seek to find the most efficient way to complete it.
     </p>
-<h2>Projects!</h2>
-<ol>
+<h2>Projects</h2>
 <li> This webpage
 </li>
-</ol>
 <h2>Special Intrests</h2>
 <li> Game Design
 <li> Film History and Technique
 <li> Hyperfocusing on Particular Subjects 
+<li> Pop Culture    
+<li> Anicent Cultures and History
 </li>   
 
 </html>
