--- a/tracery.html
+++ b/tracery.html
@@ -105,9 +105,9 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
 </style>
     </head>
     <body>
-		<div id="title-container">Tracery Fun!</div>
+		<div id="title-container">Video Games!</div>
 
-        <div id="text-container">This engine teach you the basics of Tracery grammar!</div>
+        <div id="text-container">Let's look at two excellent and influential games!</div>
 
         <div id="button-container">
             <button class="button" onclick="displayAbout()">About</button>
