--- a/researchproject.html
+++ b/researchproject.html
@@ -20,11 +20,14 @@ lasting impression, even when the game is over. “Because players' choices in g
 tied to consequences that stem from their own actions, games engage players in ethically
 and emotionally meaningful reflections of personal agency and responsibility” (Sicart). For
 this project, I go through the history of video games, especially in the early decades, to find
-the meaning and observations that can be made about human condition through the
-medium of video games. Games can evoke deep emotional responses by enabling and
+the meaning and observations that can be made about the human condition through the
+medium of video games. 
+
+
+Games can evoke deep emotional responses by enabling and
 creating scenarios that allow for introspection about what it means to be human. (Isbister)
 I used my long knowledge of the gaming industry, history, and medium, as well as the use of Twine,
-to figure out the most efficient way to break down what titles, and what
+to figure out the most efficient way to break down what titles and what
 aspect of gaming I should focus on. “Games offer a unique emotional engagement by
 placing players in situations of failure and struggle—and it is through encountering one’s
 own limitations that one gains insight into one’s motivations, attitudes, and identity” (Juul).
