--- a/researchproject.html
+++ b/researchproject.html
@@ -3,13 +3,13 @@ layout: default
 title: Research Project
 ---  
 
-# My Final Research Project  
+# My Final Research Project  #
 
 
 <a href="Research Project.html">The Story</a>
 
 
-# Abstract
+# Abstract #
 
 “Human creativity is responsive in the dynamic operation of interrelated technologies that
 constitute an interconnected technological world” (Blok). What are video games? They can
