--- a/researchproject.html
+++ b/researchproject.html
@@ -3,13 +3,27 @@ layout: default
 title: Research Project
 ---  
 
-# My Final Research Project  #
+<style>
+  .bold-text {
+
+    My Final Research Project
+    
+    font-weight: bold; /* or a numerical value like 600, 700, 900 */
+  }
+</style>
 
 
 <a href="Research Project.html">The Story</a>
 
 
-# Abstract #
+<style>
+  .bold-text {
+
+   Abstract
+    
+    font-weight: bold; /* or a numerical value like 600, 700, 900 */
+  }
+</style>
 
 “Human creativity is responsive in the dynamic operation of interrelated technologies that
 constitute an interconnected technological world” (Blok). What are video games? They can
